# bird-window-collision

./: .gitignore  README.md  bird-collision-risk-tool-plan.md  config.yaml  pyproject.toml
.claude/: launch.json
docs/: README.md  index.html  kepler-config.json  methodology.md  phase2_birdflow.md  sdgsat_alan.md  sdgsat_pipeline_prompt.md
docs/assets/: index--ndVtEVe.css  mapbox-gl-BYuHNEMD.js  mapbox-gl-ClOAJjw9.js  mapbox-gl-HVvjJz0g.js
notebooks/: _build_validation_notebook.py  validation_cbcm.ipynb
pipeline/: alan.py  alan_hires.py  buildings.py  config.py  habitat.py  risk.py  scenario.py
scripts/: build_alan.py  build_alan_hires.py  build_buildings.py  build_risk.py  check_gee_auth.py  compare_lighting.py  export_geojson.py  fetch_overture_city.py  fetch_sdgsat.py  inspect_local_footprints.py  run_scenario.py
tests/: test_alan_hires.py  test_risk.py  test_scenario.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: kepler-config.json
web/public/geojson/: cbcm_points.geojson
web/src/: App.css  App.tsx  KeplerMap.tsx  index.css  main.tsx  store.ts
