[project]
name = "bird-collision-risk"
version = "0.1.0"
description = "Relative bird–window collision risk scoring for city buildings"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.0",
    "geemap>=0.32",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "osmnx>=2.0",
    "pyyaml>=6.0",
    "overturemaps>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
